Fixed palette and focus management with Tab/ShiftTab

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,21 @@
 :root {
     /* Color Palette */
-    --color-foreground: #e0e0e0;
-    --color-background: #121212;
-    --color-separator-label: #555555;
-    --color-separator-line: #333333;
-    --color-searchbar: #333333;
-    --color-searchbar-label: #555555;
-    --color-filterbar: #333333;
-    --color-hoverback: #333333;
-    --color-dimmed: #333333;
-
-    --icon-color-normal: var(--color-foreground);
-    --icon-color-dimmed: var(--color-dimmed);
-    --icon-color: var(--icon-color-normal);
+    --palette-foreground: #e0e0e0;
+    --palette-background: #121212;
+    --palette-separator-label: #555555;
+    --palette-separator-line: #333333;
+    --palette-searchbar: #333388;
+    --palette-searchbar-label: #6666FF;
+    --palette-selector: #e0e0e0;
+    --palette-filterbar: #333333;
+    --palette-hoverback: #333333;
+    --palette-dimmed: #333333;
+    --selector-color: var(--palette-selector);
 }
 
 body {
-    background-color: var(--color-background);
-    color: var(--color-foreground);
+    background-color: var(--palette-background);
+    color: var(--palette-foreground);
     font-family: monospace;
     font-size: 16pt;
 }
@@ -28,13 +26,12 @@ body {
     left: 0;
     right: 0;
     padding: 8px 0px;
-    background-color: var(--color-filterbar);
-    color: var(--icon-color-normal);
+    background-color: var(--palette-filterbar);
+    color: var(--palette-foreground);
     text-align: center;
     z-index: 0;
     visibility: hidden;
 }
-
 
 .prompt.search-modal {
     position: fixed;
@@ -43,7 +40,7 @@ body {
     transform: translate(-50%, -50%);
     width: 50%;
     padding: 10px;
-    background-color: var(--color-searchbar);
+    background-color: var(--palette-searchbar);
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     z-index: 2;
@@ -59,7 +56,7 @@ body {
 .prompt.search-modal::after {
     content: 'Search';
     font-size: 12px;
-    color: var(--color-searchbar-label);
+    color: var(--palette-searchbar-label);
     position: absolute;
     top: 5px;
     left: 10px;
@@ -88,10 +85,10 @@ body {
 .icono {
     margin: 10px;
     padding: 10px;
-    border: 2px solid transparent;
-    border-radius: 5px;
+    border: 2px solid transparent !important;
+    border-radius: 8px;
     text-decoration: none;
-    color: var(--icon-color);
+    color: var(--palette-foreground);
     display: flex;
     align-items: center;
     gap: 8px;
@@ -102,7 +99,7 @@ body {
     align-items: center;
     justify-content: flex-start;
     font-size: 10pt;
-    color: var(--color-separator-label);
+    color: var(--palette-separator-label);
     width: 100%;
     margin: 5px 0;
 }
@@ -111,7 +108,7 @@ body {
     content: '';
     flex: 1;
     height: 1px;
-    background-color: var(--color-separator-line);
+    background-color: var(--palette-separator-line);
     margin-right: 10px;
 }
 
@@ -119,25 +116,33 @@ body {
     content: '';
     width: 25px;
     height: 1px;
-    background-color: var(--color-separator-line);
+    background-color: var(--palette-separator-line);
     margin-left: 10px;
 }
 
 .icono.discarded {
-    color: var(--icon-color-dimmed) !important;
+    color: var(--palette-dimmed) !important;
+}
+
+.icono.focused {
+    border-color: var(--palette-selector) !important;
+}
+
+.icono:focus {
+    outline: none;
 }
 
 .icono:hover {
-    background-color: var(--color-hoverback);
+    background-color: var(--palette-hoverback);
 }
 
 /* Asegura que los enlaces visitados no se diferencien */
 .icono.discarded:visited {
-    color: var(--icon-color-dimmed) !important;
+    color: var(--palette-dimmed) !important;
 }
 
 .icono:visited {
-    color: var(--icon-color) !important;
+    color: var(--palette-foreground) !important;
 }
 
 .actionmenu {
